<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_details"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:id="@+id/etname"
                android:hint="@string/enter_name"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="@dimen/margin_10dp"
                android:id="@+id/etdate"
                android:hint="@string/enter_date"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginLeft="@dimen/margin_10dp"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:text="@string/update"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10dp"/>


    </LinearLayout>
</layout>